--- a/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.css
+++ b/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.css
@@ -255,20 +255,18 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
   width: 100%;
+  min-height: 500px;
 }
 
 .bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-add-input-group {
@@ -295,27 +293,68 @@
   font-size: 20px;
 }
 
+.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-input-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 300px;
+  background: #fff;
+  border: 1px solid #a0a0a0;
+  border-radius: 4px;
+  padding-left: 0.5rem;
+  overflow: hidden;
+  font-family: sans-serif;
+}
+
+.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-input-box:focus-within {
+  border-color: #777;
+}
+
+.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-prefix {
+  font-weight: 300;
+  font-size: 20px;
+  color: #999;
+}
+
 .bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-input-field {
-  width: 300px;
-  height: 33px;
-  padding-left: 5px;
-  font-size: 18px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  font-size: 20px;
+  background: #fff;
+  border: none;
+  outline: none;
+  padding: 0.5rem;
 }
 
 .bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-add-custom {
   margin-top: 10px;
 }
 
-.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-add-custom-btn {
-  border: none;
-  background-color: none;
-  color: black;
-  cursor: pointer;
-  font-size: 20px;
-  margin-bottom: 20px;
+.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-add-custom .bb-add-custom-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-add-custom-row {
+.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-add-custom .bb-add-custom-row .bb-delete-custom-btn {
+  position: relative;
+  top: 3px;
+  padding: 11px;
+  outline: none;
+}
+
+.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-buttons-div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -325,11 +364,17 @@
           flex-direction: row;
 }
 
-.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-add-custom-row .bb-input-custom-field {
-  width: 200px;
-  height: 33px;
-  padding-left: 5px;
+.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-buttons-div .bb-add-custom-btn {
+  cursor: pointer;
+  margin-right: 20px;
   font-size: 18px;
+  padding: 5px;
+}
+
+.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-buttons-div .bb-submit-custom-btn {
+  cursor: pointer;
+  font-size: 18px;
+  padding: 5px;
 }
 
 .bb-right {
