--- a/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.scss
+++ b/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.scss
@@ -110,9 +110,12 @@
         }
       }
       .bb-add-body {
-        @include center(column);
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
         align-items: flex-start;
         width: 100%;
+        min-height: 500px;
         .bb-add-input-group {
           @include center(column);
           align-items: flex-start;
@@ -121,31 +124,60 @@
         .bb-input-title {
           font-size: 20px;
         }
+        .bb-input-box {
+          display: flex;
+          align-items: center;
+          max-width: 300px;
+          background: #fff;
+          border: 1px solid #a0a0a0;
+          border-radius: 4px;
+          padding-left: 0.5rem;
+          overflow: hidden;
+          font-family: sans-serif;
+          &:focus-within {
+            border-color: #777;
+          }
+        }
+        .bb-prefix {
+          font-weight: 300;
+          font-size: 20px;
+          color: #999;
+        }
         .bb-input-field {
-          width: 300px;
-          height: 33px;
-          padding-left: 5px;
-          font-size: 18px;
+          flex-grow: 1;
+          font-size: 20px;
+          background: #fff;
+          border: none;
+          outline: none;
+          padding: 0.5rem;
         }
         .bb-add-custom {
           margin-top: 10px;
+          .bb-add-custom-row {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            .bb-delete-custom-btn {
+              position: relative;
+              top: 3px;
+              padding: 11px;
+              outline: none;
+            }
+          }
         }
-        .bb-add-custom-btn {
-          border: none;
-          background-color: none;
-          color: black;
-          cursor: pointer;
-          font-size: 20px;
-          margin-bottom: 20px;
-        }
-        .bb-add-custom-row {
+        .bb-buttons-div {
           display: flex;
           flex-direction: row;
-          .bb-input-custom-field {
-            width: 200px;
-            height: 33px;
-            padding-left: 5px;
+          .bb-add-custom-btn {
+            cursor: pointer;
+            margin-right: 20px;
             font-size: 18px;
+            padding: 5px;
+          }
+          .bb-submit-custom-btn {
+            cursor: pointer;
+            font-size: 18px;
+            padding: 5px;
           }
         }
       }
